samples/_failures_safe/1761200082_6e2ee6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2f5e9a5.c: In function ‘main’:
./samples/SAFE/__tmp_b2f5e9a5.c:150:5: error: expected declaration or statement at end of input
  150 |     if (unique_count == 0) {
      |     ^~
./samples/SAFE/__tmp_b2f5e9a5.c:150:5: error: expected declaration or statement at end of input
